<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".activities.AboutAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/title_bar_background"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:scaleX="2"
            android:scaleY="2"
            app:tint="@color/white"
            android:background="@color/title_bar_background"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_app"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/app_text_color"
            android:padding="10dp"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/app_version"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/app_text_color"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/beta"
                android:textSize="20sp"
                android:textColor="@color/app_text_color"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/developer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/app_text_color"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lbc"
                android:textSize="20sp"
                android:textColor="@color/app_text_color"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/app_text_color"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="12dp"
            android:gravity="center_vertical"/>

    </LinearLayout>


</LinearLayout>