<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RemoteControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/title_bar_background">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:scaleX="2"
            android:scaleY="2"
            app:tint="@color/white"
            android:background="@color/title_bar_background"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/device_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/app_text_color"
            android:singleLine="true"
            android:padding="10dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/app_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/device_address"
                    android:textColor="@color/app_hint_color"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:gravity="bottom|start"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/deviceAddress"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/address"
                    android:textColor="@color/app_hint_color"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:gravity="bottom|start"
                    android:layout_weight="3"/>

            </LinearLayout>


            <com.ben.dronecontroller.views.VirtualJoystickView
                android:id="@+id/pitchRollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/rssi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rssi"
            android:textSize="12sp"
            android:textColor="@color/app_hint_color"
            android:gravity="center"
            android:layout_marginBottom="6dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takeoffButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/take_off"
            android:textColor="@color/white"

            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="10dp"

            android:background="@drawable/bg_button"
            android:backgroundTint="@color/app_button_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:text="@string/reset_gyro"
                android:textColor="@color/white"
                android:singleLine="true"

                app:icon="@drawable/ic_reset"
                app:iconTint="@color/white"
                app:iconSize="20dp"

                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="10dp"

                android:background="@drawable/bg_button"
                android:backgroundTint="@color/app_button_color"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lockButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"

                android:text="@string/lock_gyro"
                android:textColor="@color/white"
                android:singleLine="true"

                app:icon="@drawable/ic_lock_open"
                app:iconTint="@color/white"
                app:iconSize="20dp"

                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="10dp"

                android:background="@drawable/bg_button"
                android:backgroundTint="@color/app_button_color"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>