<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".activities.BleConnectionTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/title_bar_background"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="@color/title_bar_background"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/ic_back"
            app:tint="@color/white"

            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ble_connection_test"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/app_text_color"
            android:padding="10dp"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transmission_test"
        android:textSize="12sp"
        android:textColor="@color/app_text_color"
        android:layout_marginHorizontal="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"/>

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <Spinner
            android:id="@+id/modeSpinner"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="10dp"

            android:background="@drawable/bg_dropdown"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown"

            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/dataInputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/ic_edit_text"
            android:backgroundTint="@color/white"
            android:hint="@string/send_data"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:textColor="@color/black"
            android:textColorHint="@color/app_hint_color"
            android:textSize="16sp"

            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:src="@drawable/ic_send"
            app:tint="@color/white"

            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>